# T3E

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSGX.cmake
include/: OpenSSLHelper.h  T3E-Untrusted.h  T3E.h  TPMHandler.h  TPMStruct.h  TestSuiteStruct.h
trusted/: Enclave.config.xml  T3E-Enclave.cpp  T3E-Enclave.edl  TestSuiteEnclave.cpp  TestSuiteEnclave.edl
untrusted/: Main.cpp  T3E-Untrusted.cpp  TPMHandler.cpp  TestSuite.cpp
